# libyaml

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md  yaml.pc.in
docs/: DOMAIN.md  README.md
docs/decisions/: 002-event-loop-compatibility.md  003-testing-fuzzing-valgrind.md  004-dialectic-client-server-testing.md  005-integrated-knowledge-tree.md  006-core-library-as-plumbing-pdu-stack.md  007-documentation-and-manpage-updates.md  009-consistent-protocol-interfaces.md  010-c-interfaces-and-language-bindings.md  011-nefarious-mitm-adversarial-testing.md  012-extended-event-loop-and-real-time-compatibility.md  013-embedded-lua-scripting-for-policy-and-automation.md
examples/: yaml_parse_example.c  yaml_roundtrip_example.c
fuzz/: fuzz_yaml.c  fuzz_yaml_knowledge.c  fuzz_yaml_serializer.c
include/: yaml.h  yaml_version.h.in
man/man3/: yaml_create.3  yaml_depth.3  yaml_emit_alias.3  yaml_emit_mapping_start.3  yaml_emit_scalar.3  yaml_events.3  yaml_feed_input.3  yaml_get_child_count.3  yaml_has_pending_events.3  yaml_lookup_scalar.3  yaml_next_event.3  yaml_output_pending.3  yaml_serialize_kv.3
src/: yaml.c
tests/: test_yaml_anchor_alias.c  test_yaml_api.c  test_yaml_block_scalars.c  test_yaml_dialectic.c  test_yaml_errors.c  test_yaml_flow.c  test_yaml_knowledge.c  test_yaml_knowledge_deep.c  test_yaml_multiline.c  test_yaml_nesting.c  test_yaml_quoted_edge.c  test_yaml_roundtrip.c  test_yaml_smoke.c
